tests/paczka1/small_fuzzy/40943606.err
Error in line 2: yjtz0rerJAf A99 25,8
Error in line 9: yjtz0rerJAf ATT 41,6
Error in line 6: yjtz0rerJAf S763 72,3
Error in line 10: S358 S358 90,9
